--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,23 @@ flyway.user=sa
 flyway.password=
 flyway.locations=filesystem:db/migrate
 
-### flyway common
+#### Multi database
+### DB1
+flyway.test1.url=jdbc:h2:file:./test1
+flyway.test1.user=sa
+flyway.test1.password=
+flyway.test1.locations=filesystem:db/test1/migrate
+
+### DB2
+flyway.test2.url=jdbc:h2:file:./test2
+flyway.test2.user=sa
+flyway.test2.password=
+flyway.test2.locations=filesystem:db/test2/migrate
+
+#### flyway common
 flyway.outOfOrder=true
 flyway.encoding=utf-8
+
 
 ### gradle wrapper version
 gradleVersion=2.14
